[project]
name = "Wmata-Forecasting"
version = "0.1.0"
description = "Comparison of Forecasting Approaches for WMATA Metro Ridership"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "graphviz>=0.21",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "meteostat>=1.7.6",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "prophet>=1.2.1",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "torch>=2.5.1",
]


[tool.uv]
environments = ["sys_platform == 'win32'"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
